--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^14.14.6",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
-    "ts-node": "^9.0.0"
+    "ts-node": "^9.0.0",
+    "jest": "^28.1.2"
   }
 }
